@@ -1,7 +1,5 @@
 package uk.gov.hmcts.reform.prl.services;
 
-
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -43,22 +41,15 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.STAFFSORTCOLUMN
 @Service
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class RefDataUserService {
-
     private final AuthTokenGenerator authTokenGenerator;
-
     private final StaffResponseDetailsApi staffResponseDetailsApi;
-
     private final JudicialUserDetailsApi judicialUserDetailsApi;
-
     private final IdamClient idamClient;
-
     private final CommonDataRefApi commonDataRefApi;
-
     private final LaunchDarklyClient launchDarklyClient;
 
     @Value("${prl.refdata.username}")
     private String refDataIdamUsername;
-
     @Value("${prl.refdata.password}")
     private String refDataIdamPassword;
 
@@ -125,7 +116,7 @@ public class RefDataUserService {
         if (null != listOfStaffResponse) {
             return listOfStaffResponse.stream()
                 .filter(response -> response.getStaffProfile().getUserType().equalsIgnoreCase(LEGALOFFICE))
-                .map(this::getDisplayEntry).collect(Collectors.toList());
+                .map(this::getDisplayEntry).toList();
         }
         return List.of(DynamicListElement.builder().build());
     }
@@ -177,7 +168,7 @@ public class RefDataUserService {
         if (null != commonDataResponse && null != commonDataResponse.getCategoryValues()) {
             listOfSubCategoryValues = commonDataResponse.getCategoryValues().stream()
                 .filter(categoryValues -> categoryValues.getChildNodes() != null && categoryValues.getValueEn().equalsIgnoreCase(hearingPlatform))
-                .map(CategoryValues::getChildNodes).collect(Collectors.toList()).stream()
+                .map(CategoryValues::getChildNodes).toList().stream()
                 .flatMap(Collection::stream)
                 .map(this::displaySubChannelEntry)
                 .collect(Collectors.toList());
